fixed some styling issues and copyright visibility

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -90,8 +90,12 @@ p{
     margin-left: 20px;
     color: #f58b7f;
 }
-
-
+.info{
+  color: white;
+  font-size: 18px;
+  font-family: helvetica;
+  text-shadow: none;
+}
 .banner{
 	max-width: 100%;
 	margin-bottom: 35px;
@@ -120,21 +124,16 @@ p{
   background-color: red;
   color: white;
 }
-
-
 #modalTitle{
   color: #f58173;
   font-size: 35px;
   text-align: center;
   line-height: normal;
 }
-
 .close{
   color: #f5f5f5;
   opacity: .4;
 }
-
-
 .thumbnail{
 	background-color: #000;
   border: 1px solid #ddd;
@@ -146,7 +145,13 @@ p{
 h5{
 	color: red;
 }
-
+h4{
+  font-family: 'Lobster', cursive;
+  color: white;
+  letter-spacing: 1px;
+  font-size: 30px;
+  text-align: center;
+}
 .thumbnail:hover{
 	 border: 1px  #fff;
 }
@@ -165,6 +170,9 @@ footer{
 	padding: 25px;
 	color: white;
 
+}
+.copyright {
+  color: #ffffff;
 }
 #apiDiv {
 	background-color: #000000;
